src/test/ui/try-trait/try-on-option.stderr
error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `FromResidual`)
  --> $DIR/try-on-option.rs:7:5
   |
LL | / fn foo() -> Result<u32, ()> {
LL | |     let x: Option<u32> = None;
LL | |     x?;
   | |     ^^ cannot use the `?` operator in a function that returns `Result<u32, ()>`
LL | |     Ok(22)
LL | | }
   | |_- this function should return `Result` or `Option` to accept `?`
   |
   = help: the trait `FromResidual<Option<!>>` is not implemented for `Result<u32, ()>`
   = note: required by `from_residual`

error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `FromResidual`)
  --> $DIR/try-on-option.rs:13:5
   |
LL | / fn bar() -> u32 {
LL | |     let x: Option<u32> = None;
LL | |     x?;
   | |     ^^ cannot use the `?` operator in a function that returns `u32`
LL | |     22
LL | | }
   | |_- this function should return `Result` or `Option` to accept `?`
   |
   = help: the trait `FromResidual<Option<!>>` is not implemented for `u32`
   = note: required by `from_residual`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
